removed apparently unsupported permsize